# survival

./: .gitignore  .gitmodules  Makefile  README.md  _config.yml  index.md
.github/workflows/: pages.yml
book/part1/: index.md
book/part2/: index.md
book/phase1/: chapter-01-the-mission.md  chapter-02-how-computers-boot.md  chapter-03-setting-up-the-workshop.md  chapter-04-hello-uefi.md  chapter-05-memory-without-an-os.md  chapter-06-painting-pixels.md  chapter-07-hearing-keystrokes.md  chapter-08-the-main-loop.md  index.md
book/phase2/: chapter-09-reading-the-disk.md  chapter-10-browsing-files.md  index.md  (+2 more)
docs/: bare-metal-roadmap.md
esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  app.c  app.h  app_files.c  app_files.h  app_flasher.c  app_flasher.h  app_settings.c  app_settings.h  apps.c  display.c  display.h  exfat.c  exfat.h  fat32.c  fat32.h  flasher.c  flasher.h  font.c  font.h  gpt.c  gpt.h  icons.h  main.c  payload.c  payload.h  sdcard.c  sdcard.h  settings.c  settings.h  touch.c  touch.h  ui.c  ui.h
scripts/: make-usb-image.sh  run-emulator.sh  run-qemu-exfat-ntfs-test-x86_64.sh  run-qemu-exfat-ntfs-test.sh  run-qemu-iso-test-x86_64.sh  run-qemu-iso-test.sh  run-qemu-x86_64.sh  run-qemu.sh  setup-toolchain.sh
src/: boot.h  browse.c  browse.h  disk.c  disk.h  edit.c  edit.h  exfat.c  exfat.h  fat32.c  fat32.h  fb.c  fb.h  font.c  font.h  fs.c  fs.h  iso.c  iso.h  kbd.c  kbd.h  main.c  mem.c  mem.h  ntfs.c  ntfs.h  setjmp_aarch64.S  setjmp_aarch64.c  setjmp_x86_64.S  shim.c  shim.h  tcc.c  tcc.h
(+90 files in other folders)
