idf_component_register(
    SRCS
        "main.c"
        "display.c"
        "touch.c"
        "sdcard.c"
        "gpt.c"
        "fat32.c"
        "flasher.c"
        "payload.c"
        "ui.c"
        "font.c"
        "settings.c"
        "app.c"
        "apps.c"
        "app_flasher.c"
        "app_settings.c"
    INCLUDE_DIRS "."
)
